--- a/Softphone.Net/Softphone.Net/packages.config
+++ b/Softphone.Net/Softphone.Net/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fleck" version="1.2.0" targetFramework="net48" />
   <package id="ozeki.voip.sip.client" version="11.2.4" targetFramework="net48" />
 </packages>
